TabularDetail: Fixed overflow issues on smaller screens

--- a/pkg/www/stylesheets/layout.scss
+++ b/pkg/www/stylesheets/layout.scss
@@ -255,7 +255,13 @@ footer.zebra {
             }
         }
     }
-
+    .TableHeaderContainer {
+        overflow: hidden;
+        &::-webkit-scrollbar
+        {
+            display: none;
+        }
+    }
 }
 
 /*
